# Ouijachess

./: Cargo.toml
src/: main.rs
static/: index.html  script.js  spectate.html
